Register webpage updated
All front-end contents are updated

--- a/web/register.html
+++ b/web/register.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Taste.it - Free Bootstrap 4 Template by Colorlib</title>
+	<title>Tu Restaurante en Casa</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	
@@ -31,8 +31,8 @@
 				<div class="col-12 col-md d-flex align-items-center">
 					<p class="mb-0 phone"><span class="mailus">Phone no:</span> <a href="#">+00 1234 567</a> or <span class="mailus">email us:</span> <a href="#">emailsample@email.com</a></p>
 				</div>
-				<div class="col-12 col-md d-flex justify-content-md-end">
-					<p class="mb-0">Mon - Fri / 9:00-21:00, Sat - Sun / 10:00-20:00</p>
+				<div class="col-12 col-md-4 d-flex justify-content-md-end btn-group">
+					<a href="register.html" class="btn btn-primary btn-sm">Regístrate o inicia sesión</a>
 				</div>
 			</div>
 		</div>
@@ -40,18 +40,18 @@
 	
 	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 		<div class="container">
-			<a class="navbar-brand" href="index.html">Taste.<span>it</span></a>
+			<a class="navbar-brand" href="index.html">Tu Restaurante<span> en Casa</span></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="oi oi-menu"></span> Menu
 			</button>
 
 			<div class="collapse navbar-collapse" id="ftco-nav">
 				<ul class="navbar-nav ml-auto">
-					<li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-					<li class="nav-item"><a href="chef.html" class="nav-link">Chef</a></li>
-					<li class="nav-item"><a href="menu.html" class="nav-link">Menu</a></li>
-					<li class="nav-item active"><a href="register.html" class="nav-link">Reservation</a></li>
-					<li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+					<li class="nav-item"><a href="index.html" class="nav-link">Principal</a></li>
+					<li class="nav-item"><a href="chef.html" class="nav-link">Equipo</a></li>
+					<li class="nav-item"><a href="menu.html" class="nav-link">Menú</a></li>
+					<li class="nav-item active"><a href="register.html" class="nav-link">Registro</a></li>
+					<li class="nav-item"><a href="contact.html" class="nav-link">Contacto</a></li>
 				</ul>
 			</div>
 		</div>
@@ -63,8 +63,7 @@
 		<div class="container">
 			<div class="row no-gutters slider-text align-items-end justify-content-center">
 				<div class="col-md-9 ftco-animate text-center mb-5">
-					<h1 class="mb-2 bread">Book A Table Now</h1>
-					<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="fa fa-chevron-right"></i></a></span> <span>Reservation <i class="fa fa-chevron-right"></i></span></p>
+					<h1 class="mb-2 bread">¡Regístrate ya!</h1>
 				</div>
 			</div>
 		</div>
@@ -72,85 +71,73 @@
 
 	<section class="ftco-section ftco-wrap-about ftco-no-pb ftco-no-pt">
 		<div class="container">
-			<div class="row no-gutters">
-				<div class="col-sm-12 p-4 p-md-5 d-flex align-items-center justify-content-center bg-primary">
-					<form action="#" class="appointment-form">
-						<h3 class="mb-3">Book your Table</h3>
-						<div class="row justify-content-center">
-							<div class="col-md-4">
-								<div class="form-group">
-									<input type="name" class="form-control" placeholder="Name">
+			<div class="col" style="background-image:url(images/chef-4.jpg);">
+				<div class="row">
+					<div class="col-sm-4 p-4 p-md-5 d-flex align-items-center justify-content-md-end bg-primary">
+						<form action="#" class="appointment-form">
+							<h3 class="mb-3">Regístrate</h3>
+							<div class="row">
+								<div class="col-md-12">
+									<div class="form-group">
+										<input type="name" class="form-control" placeholder="Nombre">
+									</div>
 								</div>
-							</div>
-							<div class="col-md-4">
-								<div class="form-group">
-									<input type="email" class="form-control" placeholder="Email">
+								<div class="col-md-12">
+									<div class="form-group">
+										<input type="name" class="form-control" placeholder="Apellidos">
+									</div>
 								</div>
-							</div>
-							<div class="col-md-4">
-								<div class="form-group">
-									<input type="text" class="form-control" placeholder="Phone">
+								<div class="col-md-12">
+									<div class="form-group">
+										<input type="email" class="form-control" placeholder="Correo electrónico">
+									</div>
 								</div>
-							</div>
-							<div class="col-md-4">
-								<div class="form-group">
-									<div class="input-wrap">
-										<div class="icon"><span class="fa fa-calendar"></span></div>
-										<input type="text" class="form-control book_date" placeholder="Check-In">
+								<div class="col-md-12">
+									<div class="form-group">
+										<input type="text" class="form-control" placeholder="Teléfono">
+									</div>
+								</div>
+								<div class="col-md-12">
+									<div class="form-group">
+										<input type="password" class="form-control" placeholder="Contraseña">
+									</div>
+								</div>
+								<div class="col-md-12">
+									<div class="form-group">
+										<input type="password" class="form-control" placeholder="Confirmar contraseña">
+									</div>
+								</div>
+								<div class="col-md-12">
+									<div class="form-group">
+										<input type="submit" value="Regístrate" class="btn btn-white py-3 px-4">
 									</div>
 								</div>
 							</div>
-							<div class="col-md-4">
-								<div class="form-group">
-									<div class="input-wrap">
-										<div class="icon"><span class="fa fa-clock-o"></span></div>
-										<input type="text" class="form-control book_time" placeholder="Time">
+						</form>
+					</div>
+					<div class="col-sm-4 p-4 p-md-5 d-flex align-items-center justify-content-center">
+					</div>
+					<div class="col-sm-4 p-4 p-md-5 d-flex align-items-center justify-content-center bg-primary">
+						<form action="#" class="appointment-form">
+							<h3 class="mb-3">Iniciar sesión</h3>
+							<div class="row">
+								<div class="col-md-12">
+									<div class="form-group">
+										<input type="email" class="form-control" placeholder="Correo electrónico">
+									</div>
+								</div>
+								<div class="col-md-12">
+									<div class="form-group">
+										<input type="password" class="form-control" placeholder="Contraseña">
+									</div>
+								</div>
+								<div class="col-md-12">
+									<div class="form-group">
+										<input type="submit" value="Iniciar sesión" class="btn btn-white py-3 px-4">
 									</div>
 								</div>
 							</div>
-							<div class="col-md-4">
-								<div class="form-group">
-									<div class="form-field">
-										<div class="select-wrap">
-											<div class="icon"><span class="fa fa-chevron-down"></span></div>
-											<select name="" id="" class="form-control">
-												<option value="">Guest</option>
-												<option value="">1</option>
-												<option value="">2</option>
-												<option value="">3</option>
-												<option value="">4</option>
-												<option value="">5</option>
-											</select>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-4">
-								<div class="form-group">
-									<input type="submit" value="Book Your Table Now" class="btn btn-white py-3 px-4">
-								</div>
-							</div>
-						</div>
-					</form>
-				</div>
-			</div>
-		</div>
-	</section>
-
-	<section class="ftco-section">
-		<div class="container">
-			<div class="row d-flex">
-				<div class="col-md-6 d-flex">
-					<div class="img img-2 w-100 mr-md-2" style="background-image: url(images/bg_6.jpg);"></div>
-					<div class="img img-2 w-100 ml-md-2" style="background-image: url(images/bg_4.jpg);"></div>
-				</div>
-				<div class="col-md-6 ftco-animate makereservation p-4 p-md-5">
-					<div class="heading-section ftco-animate mb-5">
-						<span class="subheading">This is our secrets</span>
-						<h2 class="mb-4">Perfect Ingredients</h2>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.
-						</p>
-						<p><a href="#" class="btn btn-primary">Learn more</a></p>
+						</form>
 					</div>
 				</div>
 			</div>
