Menu page updated

--- a/web/menu.html
+++ b/web/menu.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Taste.it - Free Bootstrap 4 Template by Colorlib</title>
+	<title>Tu Restaurante en Casa</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	
@@ -28,11 +28,11 @@
 	<div class="wrap">
 		<div class="container">
 			<div class="row justify-content-between">
-				<div class="col-12 col-md d-flex align-items-center">
-					<p class="mb-0 phone"><span class="mailus">Phone no:</span> <a href="#">+00 1234 567</a> or <span class="mailus">email us:</span> <a href="#">emailsample@email.com</a></p>
+				<div class="col-12 col-md-4 d-flex justify-content-md-end btn-group">
+					<a href="register.html" class="btn btn-primary btn-sm">Regístrate o inicia sesión</a>
 				</div>
-				<div class="col-12 col-md d-flex justify-content-md-end">
-					<p class="mb-0">Mon - Fri / 9:00-21:00, Sat - Sun / 10:00-20:00</p>
+				<div class="col-12 col-md-1 d-flex justify-content-md-end btn-group">
+					<a href="order.html" class="btn btn-primary btn-sm">Carro</a>
 				</div>
 			</div>
 		</div>
@@ -40,18 +40,18 @@
 	
 	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 		<div class="container">
-			<a class="navbar-brand" href="index.html">Taste.<span>it</span></a>
+			<a class="navbar-brand" href="index.html">Tu Restaurante<span> en Casa</span></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="oi oi-menu"></span> Menu
 			</button>
 
 			<div class="collapse navbar-collapse" id="ftco-nav">
 				<ul class="navbar-nav ml-auto">
-					<li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-					<li class="nav-item"><a href="chef.html" class="nav-link">Chef</a></li>
-					<li class="nav-item active"><a href="menu.html" class="nav-link">Menu</a></li>
-					<li class="nav-item"><a href="register.html" class="nav-link">Reservation</a></li>
-					<li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+					<li class="nav-item"><a href="index.html" class="nav-link">Principal</a></li>
+					<li class="nav-item"><a href="chef.html" class="nav-link">Equipo</a></li>
+					<li class="nav-item active"><a href="menu.html" class="nav-link">Menú</a></li>
+					<li class="nav-item"><a href="register.html" class="nav-link">Registro</a></li>
+					<li class="nav-item"><a href="contact.html" class="nav-link">Contacto</a></li>
 				</ul>
 			</div>
 		</div>
@@ -74,15 +74,15 @@
 		<div class="container">
 			<div class="row justify-content-center mb-5 pb-2">
 				<div class="col-md-7 text-center heading-section ftco-animate">
-					<span class="subheading">Specialties</span>
-					<h2 class="mb-4">Our Menu</h2>
+					<span class="subheading">Specialidades</span>
+					<h2 class="mb-4">Tu Menú</h2>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-6 col-lg-4">
 					<div class="menu-wrap">
 						<div class="heading-menu text-center ftco-animate">
-							<h3>Breakfast</h3>
+							<h3>Desayuno</h3>
 						</div>
 						<div class="menus d-flex ftco-animate">
 							<div class="menu-img img" style="background-image: url(images/breakfast-1.jpg);"></div>
@@ -204,7 +204,7 @@
 				<div class="col-md-6 col-lg-4">
 					<div class="menu-wrap">
 						<div class="heading-menu text-center ftco-animate">
-							<h3>Lunch</h3>
+							<h3>Comida</h3>
 						</div>
 						<div class="menus d-flex ftco-animate">
 							<div class="menu-img img" style="background-image: url(images/lunch-1.jpg);"></div>
@@ -326,7 +326,7 @@
 				<div class="col-md-6 col-lg-4">
 					<div class="menu-wrap">
 						<div class="heading-menu text-center ftco-animate">
-							<h3>Dinner</h3>
+							<h3>Cena</h3>
 						</div>
 						<div class="menus d-flex ftco-animate">
 							<div class="menu-img img" style="background-image: url(images/dinner-1.jpg);"></div>
@@ -421,7 +421,7 @@
 				<div class="col-md-6 col-lg-4">
 					<div class="menu-wrap">
 						<div class="heading-menu text-center ftco-animate">
-							<h3>Desserts</h3>
+							<h3>Postres</h3>
 						</div>
 						<div class="menus d-flex ftco-animate">
 							<div class="menu-img img" style="background-image: url(images/dessert-1.jpg);"></div>
@@ -501,7 +501,7 @@
 				<div class="col-md-6 col-lg-4">
 					<div class="menu-wrap">
 						<div class="heading-menu text-center ftco-animate">
-							<h3>Wine Card</h3>
+							<h3>Vinos</h3>
 						</div>
 						<div class="menus d-flex ftco-animate">
 							<div class="menu-img img" style="background-image: url(images/wine-1.jpg);"></div>
@@ -623,7 +623,7 @@
 				<div class="col-md-6 col-lg-4">
 					<div class="menu-wrap">
 						<div class="heading-menu text-center ftco-animate">
-							<h3>Drinks &amp; Tea</h3>
+							<h3>Bebidas &amp; Té</h3>
 						</div>
 						<div class="menus d-flex ftco-animate">
 							<div class="menu-img img" style="background-image: url(images/drink-1.jpg);"></div>
@@ -732,85 +732,18 @@
 
 	</section>
 
-	<section class="ftco-section ftco-wrap-about bg-primary ftco-no-pb ftco-no-pt">
-		<div class="container">
-			<div class="row no-gutters">
-				<div class="col-sm-12 p-4 p-md-5 d-flex align-items-center justify-content-center bg-primary">
-					<form action="#" class="appointment-form">
-						<h3 class="mb-3">Book your Table</h3>
-						<div class="row justify-content-center">
-							<div class="col-md-4">
-								<div class="form-group">
-									<input type="name" class="form-control" placeholder="Name">
-								</div>
-							</div>
-							<div class="col-md-4">
-								<div class="form-group">
-									<input type="email" class="form-control" placeholder="Email">
-								</div>
-							</div>
-							<div class="col-md-4">
-								<div class="form-group">
-									<input type="text" class="form-control" placeholder="Phone">
-								</div>
-							</div>
-							<div class="col-md-4">
-								<div class="form-group">
-									<div class="input-wrap">
-										<div class="icon"><span class="fa fa-calendar"></span></div>
-										<input type="text" class="form-control book_date" placeholder="Check-In">
-									</div>
-								</div>
-							</div>
-							<div class="col-md-4">
-								<div class="form-group">
-									<div class="input-wrap">
-										<div class="icon"><span class="fa fa-clock-o"></span></div>
-										<input type="text" class="form-control book_time" placeholder="Time">
-									</div>
-								</div>
-							</div>
-							<div class="col-md-4">
-								<div class="form-group">
-									<div class="form-field">
-										<div class="select-wrap">
-											<div class="icon"><span class="fa fa-chevron-down"></span></div>
-											<select name="" id="" class="form-control">
-												<option value="">Guest</option>
-												<option value="">1</option>
-												<option value="">2</option>
-												<option value="">3</option>
-												<option value="">4</option>
-												<option value="">5</option>
-											</select>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-4">
-								<div class="form-group">
-									<input type="submit" value="Book Your Table Now" class="btn btn-white py-3 px-4">
-								</div>
-							</div>
-						</div>
-					</form>
-				</div>
-			</div>
-		</div>
-	</section>
-
 	<footer class="ftco-footer ftco-no-pb ftco-section">
 		<div class="container">
 			<div class="row mb-5">
 				<div class="col-md-6 col-lg-6">
 					<div class="ftco-footer-widget mb-4">
-						<h2 class="ftco-heading-2">Taste.it</h2>
+						<h2 class="ftco-heading-2">Tu Restaurante en Casa</h2>
 						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove</p>
 					</div>
 				</div>
 				<div class="col-md-6 col-lg-6">
 					<div class="ftco-footer-widget mb-4">
-						<h2 class="ftco-heading-2">Open Hours</h2>
+						<h2 class="ftco-heading-2">Horario</h2>
 						<ul class="list-unstyled open-hours">
 							<li class="d-flex"><span>Monday</span><span>9:00 - 24:00</span></li>
 							<li class="d-flex"><span>Tuesday</span><span>9:00 - 24:00</span></li>
