--- a/web/contact.html
+++ b/web/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Taste.it - Free Bootstrap 4 Template by Colorlib</title>
+  <title>Tu Restaurante En Casa</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   
@@ -29,10 +29,10 @@
    <div class="container">
     <div class="row justify-content-between">
      <div class="col-12 col-md d-flex align-items-center">
-      <p class="mb-0 phone"><span class="mailus">Phone no:</span> <a href="#">+00 1234 567</a> or <span class="mailus">email us:</span> <a href="#">emailsample@email.com</a></p>
+      <p class="mb-0 phone"><span class="mailus">Teléfono:</span> <a href="#">+00 1234 567</a> | <span class="mailus">Email:</span> <a href="#">emailsample@email.com</a></p>
     </div>
     <div class="col-12 col-md d-flex justify-content-md-end">
-      <p class="mb-0">Mon - Fri / 9:00-21:00, Sat - Sun / 10:00-20:00</p>
+      <p class="mb-0">Lun - Vie / 9:00-21:00, Sab - Dom / 10:00-20:00</p>
   </div>
 </div>
 </div>
@@ -40,18 +40,18 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
  <div class="container">
-   <a class="navbar-brand" href="index.html">Taste.<span>it</span></a>
+   <a class="navbar-brand" href="index.html">Tu Restaurante<span> En Casa</span></a>
    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-     <span class="oi oi-menu"></span> Menu
+     <span class="oi oi-menu"></span> Menú
    </button>
 
    <div class="collapse navbar-collapse" id="ftco-nav">
      <ul class="navbar-nav ml-auto">
-      <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-      <li class="nav-item"><a href="chef.html" class="nav-link">Chef</a></li>
-      <li class="nav-item"><a href="menu.html" class="nav-link">Menu</a></li>
-      <li class="nav-item"><a href="register.html" class="nav-link">Reservation</a></li>
-      <li class="nav-item active"><a href="contact.html" class="nav-link">Contact</a></li>
+      <li class="nav-item"><a href="index.html" class="nav-link">Inicio</a></li>
+      <li class="nav-item"><a href="chef.html" class="nav-link">Platos</a></li>
+      <li class="nav-item"><a href="menu.html" class="nav-link">Menú</a></li>
+      <li class="nav-item"><a href="register.html" class="nav-link">Reservar</a></li>
+      <li class="nav-item active"><a href="contact.html" class="nav-link">Contacto</a></li>
     </ul>
   </div>
 </div>
@@ -63,8 +63,8 @@
   <div class="container">
     <div class="row no-gutters slider-text align-items-end justify-content-center">
       <div class="col-md-9 ftco-animate text-center mb-5">
-        <h1 class="mb-2 bread">Contact us</h1>
-        <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="fa fa-chevron-right"></i></a></span> <span>Contact us <i class="fa fa-chevron-right"></i></span></p>
+        <h1 class="mb-2 bread">Contacta con nosotros</h1>
+        <!--<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Inicio <i class="fa fa-chevron-right"></i></a></span> <span>Contact us <i class="fa fa-chevron-right"></i></span></p>-->
       </div>
     </div>
   </div>
@@ -74,27 +74,22 @@
   <div class="container">
     <div class="row d-flex contact-info">
       <div class="col-md-12">
-        <h2 class="h4 font-weight-bold">Contact Information</h2>
+        <h2 class="h4 font-weight-bold">Información de contacto</h2><br>
       </div>
       <div class="w-100"></div>
-      <div class="col-md-3 d-flex">
+      <div class="col-md-4 d-flex">
        <div class="dbox">
-         <p><span>Address:</span> 198 West 21th Street, Suite 721 New York NY 10016</p>
+         <p><span>Dirección:</span> <br>198 West 21th Street, Suite 721 New York NY 10016</p>
        </div>
      </div>
-     <div class="col-md-3 d-flex">
+     <div class="col-md-4 d-flex">
        <div class="dbox">
-         <p><span>Phone:</span> <a href="tel://1234567920">+ 1235 2355 98</a></p>
+         <p><span>Teléfono:</span> <br><a href="tel://1234567920">+ 1235 2355 98</a></p>
        </div>
      </div>
-     <div class="col-md-3 d-flex">
+     <div class="col-md-4 d-flex">
        <div class="dbox">
-         <p><span>Email:</span> <a href="mailto:info@yoursite.com">info@yoursite.com</a></p>
-       </div>
-     </div>
-     <div class="col-md-3 d-flex">
-       <div class="dbox">
-         <p><span>Website</span> <a href="#">yoursite.com</a></p>
+         <p><span>Email:</span> <br><a href="mailto:info@yoursite.com">info@yoursite.com</a></p>
        </div>
      </div>
    </div>
@@ -104,22 +99,19 @@
  <div class="container">
   <div class="row d-flex align-items-stretch no-gutters">
    <div class="col-md-6 p-5 order-md-last">
-    <h2 class="h4 mb-5 font-weight-bold">Contact Us</h2>
+    <h2 class="h4 mb-5 font-weight-bold">Formulario de contacto:</h2>
     <form action="#">
       <div class="form-group">
-        <input type="text" class="form-control" placeholder="Your Name">
+        <input type="text" class="form-control" placeholder="Nombre">
       </div>
       <div class="form-group">
-        <input type="text" class="form-control" placeholder="Your Email">
+        <input type="text" class="form-control" placeholder="Email">
       </div>
       <div class="form-group">
-        <input type="text" class="form-control" placeholder="Subject">
+        <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Mensaje"></textarea>
       </div>
       <div class="form-group">
-        <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
-      </div>
-      <div class="form-group">
-        <input type="submit" value="Send Message" class="btn btn-primary py-3 px-5">
+        <input type="submit" value="Enviar Mensaje" class="btn btn-primary py-3 px-5">
       </div>
     </form>
   </div>
