--- a/web/registro.html
+++ b/web/registro.html
@@ -29,10 +29,12 @@
 		<div class="container">
 			<div class="row justify-content-between">
 				<div class="col-12 col-md d-flex align-items-center">
-					<p class="mb-0 phone"><span class="mailus">Phone no:</span> <a href="#">+00 1234 567</a> or <span class="mailus">email us:</span> <a href="#">emailsample@email.com</a></p>
 				</div>
 				<div class="col-12 col-md-4 d-flex justify-content-md-end btn-group">
-					<a href="register.html" class="btn btn-primary btn-sm">Regístrate o inicia sesión</a>
+					<a href="registro.html" class="btn btn-primary btn-sm">Regístrate o inicia sesión</a>
+				</div>
+				<div class="col-12 col-md-1 d-flex justify-content-md-end btn-group">
+					<a href="carro.html" class="btn btn-primary btn-sm">&#128722</a>
 				</div>
 			</div>
 		</div>
@@ -48,10 +50,9 @@
 			<div class="collapse navbar-collapse" id="ftco-nav">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item"><a href="index.html" class="nav-link">Principal</a></li>
-					<li class="nav-item"><a href="chef.html" class="nav-link">Equipo</a></li>
+					<li class="nav-item"><a href="equipo.html" class="nav-link">Equipo</a></li>
 					<li class="nav-item"><a href="menu.html" class="nav-link">Menú</a></li>
-					<li class="nav-item active"><a href="register.html" class="nav-link">Registro</a></li>
-					<li class="nav-item"><a href="contact.html" class="nav-link">Contacto</a></li>
+					<li class="nav-item"><a href="contacto.html" class="nav-link">Contacto</a></li>
 				</ul>
 			</div>
 		</div>
@@ -144,26 +145,28 @@
 		</div>
 	</section>
 
-	<footer class="ftco-footer ftco-no-pb ftco-section">
+	<footer class="ftco-footer ftco-no-pb ftco-section" style="background-image: url('images/bg_8');">
 		<div class="container">
 			<div class="row mb-5">
 				<div class="col-md-6 col-lg-6">
 					<div class="ftco-footer-widget mb-4">
-						<h2 class="ftco-heading-2">Taste.it</h2>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove</p>
+						<h2 class="ftco-heading-2">Tu Restaurante en Casa</h2>
+						<p>Si no puedes llegar al restaurante... ¡Haz que el restaurante llegue a ti!</p>
+ 						<p>Gracias a Tu Restaurante en Casa podrás acceder a la mejor variedad de comida sin tener que salir de casa.</p>
+  						<p>¿Te animas?</p>
 					</div>
 				</div>
 				<div class="col-md-6 col-lg-6">
 					<div class="ftco-footer-widget mb-4">
-						<h2 class="ftco-heading-2">Open Hours</h2>
+						<h2 class="ftco-heading-2">Horario</h2>
 						<ul class="list-unstyled open-hours">
-							<li class="d-flex"><span>Monday</span><span>9:00 - 24:00</span></li>
-							<li class="d-flex"><span>Tuesday</span><span>9:00 - 24:00</span></li>
-							<li class="d-flex"><span>Wednesday</span><span>9:00 - 24:00</span></li>
-							<li class="d-flex"><span>Thursday</span><span>9:00 - 24:00</span></li>
-							<li class="d-flex"><span>Friday</span><span>9:00 - 02:00</span></li>
-							<li class="d-flex"><span>Saturday</span><span>9:00 - 02:00</span></li>
-							<li class="d-flex"><span>Sunday</span><span> Closed</span></li>
+							<li class="d-flex"><span>Lunes</span><span>10:00 - 22:00</span></li>
+							<li class="d-flex"><span>Martes</span><span>Cerrado</span></li>
+							<li class="d-flex"><span>Miércoles</span><span>10:00 - 22:00</span></li>
+							<li class="d-flex"><span>Jueves</span><span>10:00 - 22:00</span></li>
+							<li class="d-flex"><span>Viernes</span><span>10:00 - 22:00</span></li>
+							<li class="d-flex"><span>Sábado</span><span>10:00 - 22:00</span></li>
+							<li class="d-flex"><span>Domingo</span><span>10:00 - 22:00</span></li>
 						</ul>
 					</div>
 				</div>
