--- a/web/carro.html
+++ b/web/carro.html
@@ -28,17 +28,19 @@
 <body>
 
 	<div class="wrap">
-		<div class="container">
-			<div class="row justify-content-between">
-				<div class="col-12 col-md d-flex align-items-center">
-					<p class="mb-0 phone"><span class="mailus">Phone no:</span> <a href="#">+00 1234 567</a> or <span class="mailus">email us:</span> <a href="#">emailsample@email.com</a></p>
-				</div>
-				<div class="col-12 col-md d-flex justify-content-md-end">
-					<p class="mb-0">Mon - Fri / 9:00-21:00, Sat - Sun / 10:00-20:00</p>
-				</div>
-			</div>
-		</div>
-	</div>
+        <div class="container">
+            <div class="row justify-content-between">
+                <div class="col-12 col-md d-flex align-items-center">
+                </div>
+                <div class="col-12 col-md-4 d-flex justify-content-md-end btn-group">
+                    <a href="registro.html" class="btn btn-primary btn-lg">Regístrate o inicia sesión</a>
+                </div>
+                <div class="col-12 col-md-1 d-flex justify-content-md-end btn-group">
+                    <a href="carro.html" class="btn btn-primary btn-lg">&#128722</a>
+                </div>
+            </div>
+        </div>
+    </div>
 	
 	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 		<div class="container">
@@ -50,10 +52,9 @@
 			<div class="collapse navbar-collapse" id="ftco-nav">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item active"><a href="index.html" class="nav-link">Principal</a></li>
-					<li class="nav-item"><a href="chef.html" class="nav-link">Equipo</a></li>
+					<li class="nav-item"><a href="equipo.html" class="nav-link">Equipo</a></li>
 					<li class="nav-item"><a href="menu.html" class="nav-link">Menú</a></li>
-					<li class="nav-item"><a href="register.html" class="nav-link">Registro</a></li>
-					<li class="nav-item"><a href="contact.html" class="nav-link">Contacto</a></li>
+					<li class="nav-item"><a href="contacto.html" class="nav-link">Contacto</a></li>
 				</ul>
 			</div>
 		</div>
@@ -66,6 +67,7 @@
 			<div class="row no-gutters slider-text align-items-end justify-content-center">
 				<div class="col-md-9 ftco-animate text-center mb-5">
 					<h1 class="mb-2 bread">Registro de pedidos</h1>
+					<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Principal <i class="fa fa-chevron-right"></i></a></span> <span>Carro <i class="fa fa-chevron-right"></i></span></p>
                     <p>Hey! Echa un vistazo a los pedidos que has realizado hasta el momento.</p>
 					<p>Si tu pedido ya está listo, ¡finaliza aquí tu compra!</p>
 				</div>
@@ -156,27 +158,29 @@
     </section>
     <br>
     
-	<footer class="ftco-footer ftco-no-pb ftco-section">
+	<footer class="ftco-footer ftco-no-pb ftco-section" style="background-image: url('images/bg_8.jpg');">
 		<div class="container">
 			<div class="row mb-5">
 				<div class="col-md-6 col-lg-6">
 					<div class="ftco-footer-widget mb-4">
 						<h2 class="ftco-heading-2">Tu Restaurante en casa</h2>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove</p>
+						<p>Si no puedes llegar al restaurante... ¡Haz que el restaurante llegue a ti!</p>
+						<p>Gracias a Tu Restaurante en Casa podrás acceder a la mejor variedad de comida sin tener que salir de casa.</p>
+						<p>¿Te animas?</p>
 					</div>
 				</div>
 				<div class="col-md-6 col-lg-6">
 					<div class="ftco-footer-widget mb-4">
-						<h2 class="ftco-heading-2">Horario de apertura</h2>
-						<ul class="list-unstyled open-hours">
-							<li class="d-flex"><span>Monday</span><span>9:00 - 24:00</span></li>
-							<li class="d-flex"><span>Tuesday</span><span>9:00 - 24:00</span></li>
-							<li class="d-flex"><span>Wednesday</span><span>9:00 - 24:00</span></li>
-							<li class="d-flex"><span>Thursday</span><span>9:00 - 24:00</span></li>
-							<li class="d-flex"><span>Friday</span><span>9:00 - 02:00</span></li>
-							<li class="d-flex"><span>Saturday</span><span>9:00 - 02:00</span></li>
-							<li class="d-flex"><span>Sunday</span><span> Closed</span></li>
-						</ul>
+						<h2 class="ftco-heading-2">Horario</h2>
+                        <ul class="list-unstyled open-hours">
+                            <li class="d-flex"><span>Lunes</span><span>10:00 - 22:00</span></li>
+                            <li class="d-flex"><span>Martes</span><span>Cerrado</span></li>
+                            <li class="d-flex"><span>Miércoles</span><span>10:00 - 22:00</span></li>
+                            <li class="d-flex"><span>Jueves</span><span>10:00 - 22:00</span></li>
+                            <li class="d-flex"><span>Viernes</span><span>10:00 - 22:00</span></li>
+                            <li class="d-flex"><span>Sábado</span><span>10:00 - 22:00</span></li>
+                            <li class="d-flex"><span>Domingo</span><span>10:00 - 22:00</span></li>
+                        </ul>
 					</div>
 				</div>
 			</div>
