--- a/web/equipo.html
+++ b/web/equipo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Taste.it - Free Bootstrap 4 Template by Colorlib</title>
+	<title>Tu Restaurante en casa</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	
@@ -26,32 +26,33 @@
 <body>
 
 	<div class="wrap">
-		<div class="container">
-			<div class="row justify-content-between">
-				<div class="col-12 col-md d-flex align-items-center">
-					<p class="mb-0 phone"><span class="mailus">Phone no:</span> <a href="#">+00 1234 567</a> or <span class="mailus">email us:</span> <a href="#">emailsample@email.com</a></p>
-				</div>
-				<div class="col-12 col-md d-flex justify-content-md-end">
-					<p class="mb-0">Mon - Fri / 9:00-21:00, Sat - Sun / 10:00-20:00</p>
-				</div>
-			</div>
-		</div>
-	</div>
+        <div class="container">
+            <div class="row justify-content-between">
+                <div class="col-12 col-md d-flex align-items-center">
+                </div>
+                <div class="col-12 col-md-4 d-flex justify-content-md-end btn-group">
+                    <a href="registro.html" class="btn btn-primary btn-sm">Regístrate o inicia sesión</a>
+                </div>
+                <div class="col-12 col-md-1 d-flex justify-content-md-end btn-group">
+                    <a href="carro.html" class="btn btn-primary btn-sm">&#128722</a>
+                </div>
+            </div>
+        </div>
+    </div>
 	
 	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 		<div class="container">
-			<a class="navbar-brand" href="index.html">Taste.<span>it</span></a>
+			<a class="navbar-brand" href="index.html">Tu Restaurante<span> en Casa</span></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="oi oi-menu"></span> Menu
 			</button>
 
 			<div class="collapse navbar-collapse" id="ftco-nav">
 				<ul class="navbar-nav ml-auto">
-					<li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-					<li class="nav-item active"><a href="chef.html" class="nav-link">Chef</a></li>
+					<li class="nav-item"><a href="index.html" class="nav-link">Principal</a></li>
+					<li class="nav-item active"><a href="equipo.html" class="nav-link">Equipo</a></li>
 					<li class="nav-item"><a href="menu.html" class="nav-link">Menu</a></li>
-					<li class="nav-item"><a href="register.html" class="nav-link">Reservation</a></li>
-					<li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+					<li class="nav-item"><a href="contacto.html" class="nav-link">Contacto</a></li>
 				</ul>
 			</div>
 		</div>
@@ -63,8 +64,8 @@
 		<div class="container">
 			<div class="row no-gutters slider-text align-items-end justify-content-center">
 				<div class="col-md-9 ftco-animate text-center mb-5">
-					<h1 class="mb-2 bread">Master Chef</h1>
-					<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="fa fa-chevron-right"></i></a></span> <span>Chef <i class="fa fa-chevron-right"></i></span></p>
+					<h1 class="mb-2 bread">Equipo</h1>
+					<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Principal <i class="fa fa-chevron-right"></i></a></span> <span>Equipo <i class="fa fa-chevron-right"></i></span></p>
 				</div>
 			</div>
 		</div>
@@ -75,8 +76,8 @@
 		<div class="container">
 			<div class="row justify-content-center mb-5 pb-2">
 				<div class="col-md-7 text-center heading-section ftco-animate">
-					<span class="subheading">Chef</span>
-					<h2 class="mb-4">Our Master Chef</h2>
+					<span class="subheading">Equipo</span>
+					<h2 class="mb-4">Nuestro equipo</h2>
 				</div>
 			</div>	
 			<div class="row">
@@ -84,8 +85,8 @@
 					<div class="staff">
 						<div class="img" style="background-image: url(images/chef-4.jpg);"></div>
 						<div class="text px-4 pt-2">
-							<h3>John Gustavo</h3>
-							<span class="position mb-2">CEO, Co Founder</span>
+							<h3>David Mestanza</h3>
+							<span class="position mb-2">Fundador</span>
 							<div class="faded">
 								<p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
 								<ul class="ftco-social d-flex">
@@ -102,8 +103,8 @@
 					<div class="staff">
 						<div class="img" style="background-image: url(images/chef-2.jpg);"></div>
 						<div class="text px-4 pt-2">
-							<h3>Michelle Fraulen</h3>
-							<span class="position mb-2">Head Chef</span>
+							<h3>Azahara Andújar</h3>
+							<span class="position mb-2">Fundador</span>
 							<div class="faded">
 								<p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
 								<ul class="ftco-social d-flex">
@@ -120,8 +121,8 @@
 					<div class="staff">
 						<div class="img" style="background-image: url(images/chef-3.jpg);"></div>
 						<div class="text px-4 pt-2">
-							<h3>Alfred Smith</h3>
-							<span class="position mb-2">Chef Cook</span>
+							<h3>Javier Méndez</h3>
+							<span class="position mb-2">Fundador</span>
 							<div class="faded">
 								<p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
 								<ul class="ftco-social d-flex">
@@ -138,8 +139,8 @@
 					<div class="staff">
 						<div class="img" style="background-image: url(images/chef-1.jpg);"></div>
 						<div class="text px-4 pt-2">
-							<h3>Antonio Santibanez</h3>
-							<span class="position mb-2">Chef Cook</span>
+							<h3>David Herrera</h3>
+							<span class="position mb-2">Fundador</span>
 							<div class="faded">
 								<p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
 								<ul class="ftco-social d-flex">
@@ -156,117 +157,20 @@
 		</div>
 	</section>
 
-	<section class="ftco-section ftco-wrap-about ftco-no-pb ftco-no-pt">
-		<div class="container">
-			<div class="row no-gutters">
-				<div class="col-sm-4 p-4 p-md-5 d-flex align-items-center justify-content-center bg-primary">
-					<form action="#" class="appointment-form">
-						<h3 class="mb-3">Book your Table</h3>
-						<div class="row">
-							<div class="col-md-12">
-								<div class="form-group">
-									<input type="name" class="form-control" placeholder="Name">
-								</div>
-							</div>
-							<div class="col-md-12">
-								<div class="form-group">
-									<input type="email" class="form-control" placeholder="Email">
-								</div>
-							</div>
-							<div class="col-md-12">
-								<div class="form-group">
-									<input type="text" class="form-control" placeholder="Phone">
-								</div>
-							</div>
-							<div class="col-md-12">
-								<div class="form-group">
-									<div class="input-wrap">
-										<div class="icon"><span class="fa fa-calendar"></span></div>
-										<input type="text" class="form-control book_date" placeholder="Check-In">
-									</div>
-								</div>
-							</div>
-							<div class="col-md-12">
-								<div class="form-group">
-									<div class="input-wrap">
-										<div class="icon"><span class="fa fa-clock-o"></span></div>
-										<input type="text" class="form-control book_time" placeholder="Time">
-									</div>
-								</div>
-							</div>
-							<div class="col-md-12">
-								<div class="form-group">
-									<div class="form-field">
-										<div class="select-wrap">
-											<div class="icon"><span class="fa fa-chevron-down"></span></div>
-											<select name="" id="" class="form-control">
-												<option value="">Guest</option>
-												<option value="">1</option>
-												<option value="">2</option>
-												<option value="">3</option>
-												<option value="">4</option>
-												<option value="">5</option>
-											</select>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-12">
-								<div class="form-group">
-									<input type="submit" value="Book Your Table Now" class="btn btn-white py-3 px-4">
-								</div>
-							</div>
-						</div>
-					</form>
-						<!-- <a href="https://vimeo.com/45830194" class="icon-video popup-vimeo d-flex justify-content-center align-items-center">
-  						<span class="ion-ios-play"></span>
-  					</a> -->
-  				</div>
-  				<div class="col-sm-8 wrap-about py-5 ftco-animate img" style="background-image: url(images/about.jpg);">
-  					<div class="row pb-5 pb-md-0">
-  						<div class="col-md-12 col-lg-7">
-  							<div class="heading-section mt-5 mb-4">
-  								<div class="pl-lg-3 ml-md-5">
-  									<span class="subheading">About</span>
-  									<h2 class="mb-4">Welcome to Taste.it</h2>
-  								</div>
-  							</div>
-  							<div class="pl-lg-3 ml-md-5">
-  								<p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-									<!-- <div class="thumb my-4 d-flex">
-			            	<a href="#" class="thumb-menu pr-md-4 text-center">
-			            		<div class="img" style="background-image: url(images/lunch-4.jpg);"></div>
-			            		<h4>Australian Organic Beef</h4>
-			            	</a>
-			            	<a href="#" class="thumb-menu pr-md-4 text-center">
-			            		<div class="img" style="background-image: url(images/lunch-7.jpg);"></div>
-			            		<h4>Australian Organic Beef</h4>
-			            	</a>
-			            	<a href="#" class="thumb-menu pr-md-4 text-center">
-			            		<div class="img" style="background-image: url(images/lunch-6.jpg);"></div>
-			            		<h4>Australian Organic Beef</h4>
-			            	</a>
-			            </div> -->
-			          </div>
-			        </div>
-			      </div>
-			    </div>
-			  </div>
-			</div>
-		</section>
-
-		<footer class="ftco-footer ftco-no-pb ftco-section">
+		<footer class="ftco-footer ftco-no-pb ftco-section" style="background-image: url('images/bg_8.jpg');">
 			<div class="container">
 				<div class="row mb-5">
 					<div class="col-md-6 col-lg-6">
 						<div class="ftco-footer-widget mb-4">
-							<h2 class="ftco-heading-2">Taste.it</h2>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove</p>
+							<h2 class="ftco-heading-2">Tu Restaurante en casa</h2>
+							<p>Si no puedes llegar al restaurante... ¡Haz que el restaurante llegue a ti!</p>
+							<p>Gracias a Tu Restaurante en Casa podrás acceder a la mejor variedad de comida sin tener que salir de casa.</p>
+							<p>¿Te animas?</p>
 						</div>
 					</div>
 					<div class="col-md-6 col-lg-6">
 						<div class="ftco-footer-widget mb-4">
-							<h2 class="ftco-heading-2">Open Hours</h2>
+							<h2 class="ftco-heading-2">Horario de apertura</h2>
 							<ul class="list-unstyled open-hours">
 								<li class="d-flex"><span>Monday</span><span>9:00 - 24:00</span></li>
 								<li class="d-flex"><span>Tuesday</span><span>9:00 - 24:00</span></li>
