Modification and standardization of most pages
The team put their ideas in common and had decided the final design of the website.
-Standardization of common elements in all pages.
-Added photos of the team members
-Changes in content of index.html and equip.html

--- a/web/carro.html
+++ b/web/carro.html
@@ -46,7 +46,7 @@
 		<div class="container">
 			<a class="navbar-brand" href="index.html">Tu Restaurante<span> en Casa</span></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="oi oi-menu"></span> Menu
+				<span class="oi oi-menu"></span> Menú
 			</button>
 
 			<div class="collapse navbar-collapse" id="ftco-nav">
@@ -195,7 +195,7 @@
 					</div>
 				</div>
 			</div>
-		</footer>
+	</footer>
 		
 
 		<!-- loader -->
