--- a/web/menu.html
+++ b/web/menu.html
@@ -28,11 +28,13 @@
 	<div class="wrap">
 		<div class="container">
 			<div class="row justify-content-between">
+				<div class="col-12 col-md d-flex align-items-center">
+				</div>
 				<div class="col-12 col-md-4 d-flex justify-content-md-end btn-group">
-					<a href="register.html" class="btn btn-primary btn-sm">Regístrate o inicia sesión</a>
+					<a href="registro.html" class="btn btn-primary btn-sm">Regístrate o inicia sesión</a>
 				</div>
 				<div class="col-12 col-md-1 d-flex justify-content-md-end btn-group">
-					<a href="order.html" class="btn btn-primary btn-sm">Carro</a>
+					<a href="carro.html" class="btn btn-primary btn-sm">&#128722</a>
 				</div>
 			</div>
 		</div>
@@ -42,16 +44,15 @@
 		<div class="container">
 			<a class="navbar-brand" href="index.html">Tu Restaurante<span> en Casa</span></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="oi oi-menu"></span> Menu
+				<span class="oi oi-menu"></span> Menú
 			</button>
 
 			<div class="collapse navbar-collapse" id="ftco-nav">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item"><a href="index.html" class="nav-link">Principal</a></li>
-					<li class="nav-item"><a href="chef.html" class="nav-link">Equipo</a></li>
+					<li class="nav-item"><a href="equipo.html" class="nav-link">Equipo</a></li>
 					<li class="nav-item active"><a href="menu.html" class="nav-link">Menú</a></li>
-					<li class="nav-item"><a href="register.html" class="nav-link">Registro</a></li>
-					<li class="nav-item"><a href="contact.html" class="nav-link">Contacto</a></li>
+					<li class="nav-item"><a href="contacto.html" class="nav-link">Contacto</a></li>
 				</ul>
 			</div>
 		</div>
@@ -63,8 +64,8 @@
 		<div class="container">
 			<div class="row no-gutters slider-text align-items-end justify-content-center">
 				<div class="col-md-9 ftco-animate text-center mb-5">
-					<h1 class="mb-2 bread">Menu</h1>
-					<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="fa fa-chevron-right"></i></a></span> <span>Menu <i class="fa fa-chevron-right"></i></span></p>
+					<h1 class="mb-2 bread">Menú</h1>
+					<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Principal <i class="fa fa-chevron-right"></i></a></span> <span>Menu <i class="fa fa-chevron-right"></i></span></p>
 				</div>
 			</div>
 		</div>
@@ -74,7 +75,7 @@
 		<div class="container">
 			<div class="row justify-content-center mb-5 pb-2">
 				<div class="col-md-7 text-center heading-section ftco-animate">
-					<span class="subheading">Specialidades</span>
+					<span class="subheading">Especialidades</span>
 					<h2 class="mb-4">Tu Menú</h2>
 				</div>
 			</div>
@@ -732,27 +733,29 @@
 
 	</section>
 
-	<footer class="ftco-footer ftco-no-pb ftco-section">
+	<footer class="ftco-footer ftco-no-pb ftco-section" style="background-image: url('images/bg_8.jpg');">
 		<div class="container">
 			<div class="row mb-5">
 				<div class="col-md-6 col-lg-6">
 					<div class="ftco-footer-widget mb-4">
-						<h2 class="ftco-heading-2">Tu Restaurante en Casa</h2>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove</p>
+						<h2 class="ftco-heading-2">Tu Restaurante en casa</h2>
+						<p>Si no puedes llegar al restaurante... ¡Haz que el restaurante llegue a ti!</p>
+						<p>Gracias a Tu Restaurante en Casa podrás acceder a la mejor variedad de comida sin tener que salir de casa.</p>
+						<p>¿Te animas?</p>
 					</div>
 				</div>
 				<div class="col-md-6 col-lg-6">
 					<div class="ftco-footer-widget mb-4">
 						<h2 class="ftco-heading-2">Horario</h2>
-						<ul class="list-unstyled open-hours">
-							<li class="d-flex"><span>Monday</span><span>9:00 - 24:00</span></li>
-							<li class="d-flex"><span>Tuesday</span><span>9:00 - 24:00</span></li>
-							<li class="d-flex"><span>Wednesday</span><span>9:00 - 24:00</span></li>
-							<li class="d-flex"><span>Thursday</span><span>9:00 - 24:00</span></li>
-							<li class="d-flex"><span>Friday</span><span>9:00 - 02:00</span></li>
-							<li class="d-flex"><span>Saturday</span><span>9:00 - 02:00</span></li>
-							<li class="d-flex"><span>Sunday</span><span> Closed</span></li>
-						</ul>
+                        <ul class="list-unstyled open-hours">
+                            <li class="d-flex"><span>Lunes</span><span>10:00 - 22:00</span></li>
+                            <li class="d-flex"><span>Martes</span><span>Cerrado</span></li>
+                            <li class="d-flex"><span>Miércoles</span><span>10:00 - 22:00</span></li>
+                            <li class="d-flex"><span>Jueves</span><span>10:00 - 22:00</span></li>
+                            <li class="d-flex"><span>Viernes</span><span>10:00 - 22:00</span></li>
+                            <li class="d-flex"><span>Sábado</span><span>10:00 - 22:00</span></li>
+                            <li class="d-flex"><span>Domingo</span><span>10:00 - 22:00</span></li>
+                        </ul>
 					</div>
 				</div>
 			</div>
@@ -767,7 +770,7 @@
 					</div>
 				</div>
 			</div>
-		</footer>
+	</footer>
 		
 
 		<!-- loader -->
