--- a/web/registro.html
+++ b/web/registro.html
@@ -44,7 +44,7 @@
 		<div class="container">
 			<a class="navbar-brand" href="index.html">Tu Restaurante<span> en Casa</span></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="oi oi-menu"></span> Menu
+				<span class="oi oi-menu"></span> Menú
 			</button>
 
 			<div class="collapse navbar-collapse" id="ftco-nav">
@@ -145,29 +145,29 @@
 		</div>
 	</section>
 
-	<footer class="ftco-footer ftco-no-pb ftco-section" style="background-image: url('images/bg_8');">
+	<footer class="ftco-footer ftco-no-pb ftco-section" style="background-image: url('images/bg_8.jpg');">
 		<div class="container">
 			<div class="row mb-5">
 				<div class="col-md-6 col-lg-6">
 					<div class="ftco-footer-widget mb-4">
-						<h2 class="ftco-heading-2">Tu Restaurante en Casa</h2>
+						<h2 class="ftco-heading-2">Tu Restaurante en casa</h2>
 						<p>Si no puedes llegar al restaurante... ¡Haz que el restaurante llegue a ti!</p>
- 						<p>Gracias a Tu Restaurante en Casa podrás acceder a la mejor variedad de comida sin tener que salir de casa.</p>
-  						<p>¿Te animas?</p>
+						<p>Gracias a Tu Restaurante en Casa podrás acceder a la mejor variedad de comida sin tener que salir de casa.</p>
+						<p>¿Te animas?</p>
 					</div>
 				</div>
 				<div class="col-md-6 col-lg-6">
 					<div class="ftco-footer-widget mb-4">
 						<h2 class="ftco-heading-2">Horario</h2>
-						<ul class="list-unstyled open-hours">
-							<li class="d-flex"><span>Lunes</span><span>10:00 - 22:00</span></li>
-							<li class="d-flex"><span>Martes</span><span>Cerrado</span></li>
-							<li class="d-flex"><span>Miércoles</span><span>10:00 - 22:00</span></li>
-							<li class="d-flex"><span>Jueves</span><span>10:00 - 22:00</span></li>
-							<li class="d-flex"><span>Viernes</span><span>10:00 - 22:00</span></li>
-							<li class="d-flex"><span>Sábado</span><span>10:00 - 22:00</span></li>
-							<li class="d-flex"><span>Domingo</span><span>10:00 - 22:00</span></li>
-						</ul>
+                        <ul class="list-unstyled open-hours">
+                            <li class="d-flex"><span>Lunes</span><span>10:00 - 22:00</span></li>
+                            <li class="d-flex"><span>Martes</span><span>Cerrado</span></li>
+                            <li class="d-flex"><span>Miércoles</span><span>10:00 - 22:00</span></li>
+                            <li class="d-flex"><span>Jueves</span><span>10:00 - 22:00</span></li>
+                            <li class="d-flex"><span>Viernes</span><span>10:00 - 22:00</span></li>
+                            <li class="d-flex"><span>Sábado</span><span>10:00 - 22:00</span></li>
+                            <li class="d-flex"><span>Domingo</span><span>10:00 - 22:00</span></li>
+                        </ul>
 					</div>
 				</div>
 			</div>
