--- a/web/equipo.html
+++ b/web/equipo.html
@@ -44,14 +44,14 @@
 		<div class="container">
 			<a class="navbar-brand" href="index.html">Tu Restaurante<span> en Casa</span></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="oi oi-menu"></span> Menu
+				<span class="oi oi-menu"></span> Menú
 			</button>
 
 			<div class="collapse navbar-collapse" id="ftco-nav">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item"><a href="index.html" class="nav-link">Principal</a></li>
 					<li class="nav-item active"><a href="equipo.html" class="nav-link">Equipo</a></li>
-					<li class="nav-item"><a href="menu.html" class="nav-link">Menu</a></li>
+					<li class="nav-item"><a href="menu.html" class="nav-link">Menú</a></li>
 					<li class="nav-item"><a href="contacto.html" class="nav-link">Contacto</a></li>
 				</ul>
 			</div>
@@ -85,10 +85,10 @@
 					<div class="staff">
 						<div class="img" style="background-image: url(images/chef-4.jpg);"></div>
 						<div class="text px-4 pt-2">
-							<h3>David Mestanza</h3>
+							<h3>Javier Méndez</h3>
 							<span class="position mb-2">Fundador</span>
 							<div class="faded">
-								<p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
+								<p>Solo tengo un objetivo, llevar comidad desde mi cocina hasta tu puerta.</p>
 								<ul class="ftco-social d-flex">
 									<li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
 									<li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -106,7 +106,7 @@
 							<h3>Azahara Andújar</h3>
 							<span class="position mb-2">Fundador</span>
 							<div class="faded">
-								<p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
+								<p>La comida para mí es un estilo de vida: estoy todo el dia comiendo. Eso,sí que sea sin gluten.</p>
 								<ul class="ftco-social d-flex">
 									<li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
 									<li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -121,10 +121,10 @@
 					<div class="staff">
 						<div class="img" style="background-image: url(images/chef-3.jpg);"></div>
 						<div class="text px-4 pt-2">
-							<h3>Javier Méndez</h3>
+							<h3>David Herrera</h3>
 							<span class="position mb-2">Fundador</span>
 							<div class="faded">
-								<p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
+								<p>Soy ambicioso y me gusta mi trabajo.</p>
 								<ul class="ftco-social d-flex">
 									<li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
 									<li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -139,10 +139,10 @@
 					<div class="staff">
 						<div class="img" style="background-image: url(images/chef-1.jpg);"></div>
 						<div class="text px-4 pt-2">
-							<h3>David Herrera</h3>
+							<h3>David Mestanza</h3>
 							<span class="position mb-2">Fundador</span>
 							<div class="faded">
-								<p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
+								<p>Mi madre me decia de pequeño que comiera mucha verdura y así he salido: vegano.</p>
 								<ul class="ftco-social d-flex">
 									<li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
 									<li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -157,44 +157,44 @@
 		</div>
 	</section>
 
-		<footer class="ftco-footer ftco-no-pb ftco-section" style="background-image: url('images/bg_8.jpg');">
-			<div class="container">
-				<div class="row mb-5">
-					<div class="col-md-6 col-lg-6">
-						<div class="ftco-footer-widget mb-4">
-							<h2 class="ftco-heading-2">Tu Restaurante en casa</h2>
-							<p>Si no puedes llegar al restaurante... ¡Haz que el restaurante llegue a ti!</p>
-							<p>Gracias a Tu Restaurante en Casa podrás acceder a la mejor variedad de comida sin tener que salir de casa.</p>
-							<p>¿Te animas?</p>
-						</div>
+	<footer class="ftco-footer ftco-no-pb ftco-section" style="background-image: url('images/bg_8.jpg');">
+		<div class="container">
+			<div class="row mb-5">
+				<div class="col-md-6 col-lg-6">
+					<div class="ftco-footer-widget mb-4">
+						<h2 class="ftco-heading-2">Tu Restaurante en casa</h2>
+						<p>Si no puedes llegar al restaurante... ¡Haz que el restaurante llegue a ti!</p>
+						<p>Gracias a Tu Restaurante en Casa podrás acceder a la mejor variedad de comida sin tener que salir de casa.</p>
+						<p>¿Te animas?</p>
 					</div>
-					<div class="col-md-6 col-lg-6">
-						<div class="ftco-footer-widget mb-4">
-							<h2 class="ftco-heading-2">Horario de apertura</h2>
-							<ul class="list-unstyled open-hours">
-								<li class="d-flex"><span>Monday</span><span>9:00 - 24:00</span></li>
-								<li class="d-flex"><span>Tuesday</span><span>9:00 - 24:00</span></li>
-								<li class="d-flex"><span>Wednesday</span><span>9:00 - 24:00</span></li>
-								<li class="d-flex"><span>Thursday</span><span>9:00 - 24:00</span></li>
-								<li class="d-flex"><span>Friday</span><span>9:00 - 02:00</span></li>
-								<li class="d-flex"><span>Saturday</span><span>9:00 - 02:00</span></li>
-								<li class="d-flex"><span>Sunday</span><span> Closed</span></li>
-							</ul>
-						</div>
+				</div>
+				<div class="col-md-6 col-lg-6">
+					<div class="ftco-footer-widget mb-4">
+						<h2 class="ftco-heading-2">Horario</h2>
+                        <ul class="list-unstyled open-hours">
+                            <li class="d-flex"><span>Lunes</span><span>10:00 - 22:00</span></li>
+                            <li class="d-flex"><span>Martes</span><span>Cerrado</span></li>
+                            <li class="d-flex"><span>Miércoles</span><span>10:00 - 22:00</span></li>
+                            <li class="d-flex"><span>Jueves</span><span>10:00 - 22:00</span></li>
+                            <li class="d-flex"><span>Viernes</span><span>10:00 - 22:00</span></li>
+                            <li class="d-flex"><span>Sábado</span><span>10:00 - 22:00</span></li>
+                            <li class="d-flex"><span>Domingo</span><span>10:00 - 22:00</span></li>
+                        </ul>
 					</div>
 				</div>
 			</div>
-			<div class="container-fluid px-0 bg-primary py-3">
-				<div class="row no-gutters">
-					<div class="col-md-12 text-center">
-	
-						<p class="mb-0"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-							Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-							<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-						</div>
+		</div>
+		<div class="container-fluid px-0 bg-primary py-3">
+			<div class="row no-gutters">
+				<div class="col-md-12 text-center">
+
+					<p class="mb-0"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+						Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
 					</div>
 				</div>
-			</footer>
+			</div>
+	</footer>
 			
 
 			<!-- loader -->
