Update contact page
Contact page updated with the same footer and header as the other pages.

--- a/web/contacto.html
+++ b/web/contacto.html
@@ -25,17 +25,19 @@
 </head>
 <body>
 
- <div class="wrap">
-   <div class="container">
+<div class="wrap">
+  <div class="container">
     <div class="row justify-content-between">
-     <div class="col-12 col-md d-flex align-items-center">
-      <p class="mb-0 phone"><span class="mailus">Teléfono:</span> <a href="#">+00 1234 567</a> | <span class="mailus">Email:</span> <a href="#">emailsample@email.com</a></p>
+      <div class="col-12 col-md d-flex align-items-center">
+      </div>
+      <div class="col-12 col-md-4 d-flex justify-content-md-end btn-group">
+        <a href="registro.html" class="btn btn-primary btn-sm">Regístrate o inicia sesión</a>
+      </div>
+      <div class="col-12 col-md-1 d-flex justify-content-md-end btn-group">
+        <a href="carro.html" class="btn btn-primary btn-sm">&#128722</a>
+      </div>
     </div>
-    <div class="col-12 col-md d-flex justify-content-md-end">
-      <p class="mb-0">Lun - Vie / 9:00-21:00, Sab - Dom / 10:00-20:00</p>
   </div>
-</div>
-</div>
 </div>
 
 <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
@@ -45,13 +47,12 @@
      <span class="oi oi-menu"></span> Menú
    </button>
 
-   <div class="collapse navbar-collapse" id="ftco-nav">
-     <ul class="navbar-nav ml-auto">
-      <li class="nav-item"><a href="index.html" class="nav-link">Inicio</a></li>
-      <li class="nav-item"><a href="chef.html" class="nav-link">Platos</a></li>
+  <div class="collapse navbar-collapse" id="ftco-nav">
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item active"><a href="index.html" class="nav-link">Principal</a></li>
+      <li class="nav-item"><a href="equipo.html" class="nav-link">Equipo</a></li>
       <li class="nav-item"><a href="menu.html" class="nav-link">Menú</a></li>
-      <li class="nav-item"><a href="register.html" class="nav-link">Reservar</a></li>
-      <li class="nav-item active"><a href="contact.html" class="nav-link">Contacto</a></li>
+      <li class="nav-item"><a href="contacto.html" class="nav-link">Contacto</a></li>
     </ul>
   </div>
 </div>
@@ -98,9 +99,9 @@
 <section class="ftco-section ftco-no-pt contact-section">
  <div class="container">
   <div class="row d-flex align-items-stretch no-gutters">
-   <div class="col-md-6 p-5 order-md-last">
-    <h2 class="h4 mb-5 font-weight-bold">Formulario de contacto:</h2>
-    <form action="#">
+  <div class="col-md-6 p-5 order-md-last">
+    <h2 class="h4 mb-5 font-weight-bold"></h2>
+    <!--<form action="#">
       <div class="form-group">
         <input type="text" class="form-control" placeholder="Nombre">
       </div>
@@ -113,7 +114,7 @@
       <div class="form-group">
         <input type="submit" value="Enviar Mensaje" class="btn btn-primary py-3 px-5">
       </div>
-    </form>
+    </form>-->
   </div>
   <div class="col-md-6 d-flex align-items-stretch">
     <div id="map"></div>
@@ -122,42 +123,49 @@
 </div>
 </section>
 
-<footer class="ftco-footer ftco-no-pb ftco-section">
-	<div class="container">
-		<div class="row mb-5">
-			<div class="col-md-6 col-lg-6">
-				<div class="ftco-footer-widget mb-4">
-					<h2 class="ftco-heading-2">Taste.it</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove</p>
-				</div>
-			</div>
-			<div class="col-md-6 col-lg-6">
-				<div class="ftco-footer-widget mb-4">
-					<h2 class="ftco-heading-2">Open Hours</h2>
-					<ul class="list-unstyled open-hours">
-						<li class="d-flex"><span>Monday</span><span>9:00 - 24:00</span></li>
-						<li class="d-flex"><span>Tuesday</span><span>9:00 - 24:00</span></li>
-						<li class="d-flex"><span>Wednesday</span><span>9:00 - 24:00</span></li>
-						<li class="d-flex"><span>Thursday</span><span>9:00 - 24:00</span></li>
-						<li class="d-flex"><span>Friday</span><span>9:00 - 02:00</span></li>
-						<li class="d-flex"><span>Saturday</span><span>9:00 - 02:00</span></li>
-						<li class="d-flex"><span>Sunday</span><span> Closed</span></li>
-					</ul>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="container-fluid px-0 bg-primary py-3">
-		<div class="row no-gutters">
-			<div class="col-md-12 text-center">
+<footer class="ftco-footer ftco-no-pb ftco-section" style="background-image: url('images/bg_8.jpg');">
+  <div class="container">
+    <div class="row mb-5">
+      <div class="col-md-6 col-lg-6">
+        <div class="ftco-footer-widget mb-4">
+          <h2 class="ftco-heading-2">Tu Restaurante en casa</h2>
+          <p>Si no puedes llegar al restaurante... ¡Haz que el restaurante llegue a ti!</p>
+          <p>Gracias a Tu Restaurante en Casa podrás acceder a la mejor variedad de comida sin tener que salir de casa.
+          </p>
+          <p>¿Te animas?</p>
+        </div>
+      </div>
+      <div class="col-md-6 col-lg-6">
+        <div class="ftco-footer-widget mb-4">
+          <h2 class="ftco-heading-2">Horario</h2>
+          <ul class="list-unstyled open-hours">
+            <li class="d-flex"><span>Lunes</span><span>10:00 - 22:00</span></li>
+            <li class="d-flex"><span>Martes</span><span>Cerrado</span></li>
+            <li class="d-flex"><span>Miércoles</span><span>10:00 - 22:00</span></li>
+            <li class="d-flex"><span>Jueves</span><span>10:00 - 22:00</span></li>
+            <li class="d-flex"><span>Viernes</span><span>10:00 - 22:00</span></li>
+            <li class="d-flex"><span>Sábado</span><span>10:00 - 22:00</span></li>
+            <li class="d-flex"><span>Domingo</span><span>10:00 - 22:00</span></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container-fluid px-0 bg-primary py-3">
+    <div class="row no-gutters">
+      <div class="col-md-12 text-center">
 
-				<p class="mb-0"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-					Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-				</div>
-			</div>
-		</div>
-	</footer>
+        <p class="mb-0">
+          <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+          Copyright &copy;
+          <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i
+            class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+          <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+        </p>
+      </div>
+    </div>
+  </div>
+</footer>
 
 
 <!-- loader -->
