--- a/web/carro.html
+++ b/web/carro.html
@@ -36,7 +36,9 @@
                     <a href="registro.html" class="btn btn-primary btn-lg">Regístrate o inicia sesión</a>
                 </div>
                 <div class="col-12 col-md-1 d-flex justify-content-md-end btn-group">
-                    <a href="carro.html" class="btn btn-primary btn-lg">&#128722</a>
+                    <a href="carro.html" class="btn btn-primary btn-sm"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart4" viewBox="0 0 16 16">
+						<path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l.5 2H5V5H3.14zM6 5v2h2V5H6zm3 0v2h2V5H9zm3 0v2h1.36l.5-2H12zm1.11 3H12v2h.61l.5-2zM11 8H9v2h2V8zM8 8H6v2h2V8zM5 8H3.89l.5 2H5V8zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>
+					  </svg></a>
                 </div>
             </div>
         </div>
@@ -51,10 +53,14 @@
 
 			<div class="collapse navbar-collapse" id="ftco-nav">
 				<ul class="navbar-nav ml-auto">
-					<li class="nav-item active"><a href="index.html" class="nav-link">Principal</a></li>
+					<li class="nav-item"><a href="index.html" class="nav-link">Principal</a></li>
 					<li class="nav-item"><a href="equipo.html" class="nav-link">Equipo</a></li>
-					<li class="nav-item"><a href="menu.html" class="nav-link">Menú</a></li>
+					<li class="nav-item"><a href="carta.html" class="nav-link">Carta</a></li>
 					<li class="nav-item"><a href="contacto.html" class="nav-link">Contacto</a></li>
+                    <li class="nav-item"><a href="perfil.html" class="nav-link" content="text-center"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+						<path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+						<path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
+					  </svg></a></li>
 				</ul>
 			</div>
 		</div>
@@ -88,7 +94,7 @@
                                         <h4><span class="glyphicon glyphicon-shopping-cart"></span> Carro de la compra</h4>
                                     </div>
                                     <div class="col-xs-6 col-md-3">
-                                        <a href="menu.html">
+                                        <a href="carta.html">
                                             <span class="glyphicon glyphicon-share-alt"></span> Continuar comprando
                                         </button></a>
                                     </div>
