--- a/web/contacto.html
+++ b/web/contacto.html
@@ -65,7 +65,6 @@
     <div class="row no-gutters slider-text align-items-end justify-content-center">
       <div class="col-md-9 ftco-animate text-center mb-5">
         <h1 class="mb-2 bread">Contacta con nosotros</h1>
-        <!--<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Inicio <i class="fa fa-chevron-right"></i></a></span> <span>Contact us <i class="fa fa-chevron-right"></i></span></p>-->
       </div>
     </div>
   </div>
@@ -96,32 +95,12 @@
    </div>
  </div>
 </section>
-<section class="ftco-section ftco-no-pt contact-section">
  <div class="container">
-  <div class="row d-flex align-items-stretch no-gutters">
-  <div class="col-md-6 p-5 order-md-last">
-    <h2 class="h4 mb-5 font-weight-bold"></h2>
-    <!--<form action="#">
-      <div class="form-group">
-        <input type="text" class="form-control" placeholder="Nombre">
-      </div>
-      <div class="form-group">
-        <input type="text" class="form-control" placeholder="Email">
-      </div>
-      <div class="form-group">
-        <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Mensaje"></textarea>
-      </div>
-      <div class="form-group">
-        <input type="submit" value="Enviar Mensaje" class="btn btn-primary py-3 px-5">
-      </div>
-    </form>-->
-  </div>
-  <div class="col-md-6 d-flex align-items-stretch">
-    <div id="map"></div>
-  </div>
+  <br>
+<center><iframe
+  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d194347.38440686226!2d-3.819621453545616!3d40.43813108092162!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd422997800a3c81%3A0xc436dec1618c2269!2sMadrid!5e0!3m2!1ses!2ses!4v1614070828627!5m2!1ses!2ses"
+  width="1100" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe></center><br>
 </div>
-</div>
-</section>
 
 <footer class="ftco-footer ftco-no-pb ftco-section" style="background-image: url('images/bg_8.jpg');">
   <div class="container">
